内存管理内容

--- a/CWCarouselView/CWCarouselView/Base.lproj/Main.storyboard
+++ b/CWCarouselView/CWCarouselView/Base.lproj/Main.storyboard
@@ -25,6 +25,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="840.79999999999995" y="122.78860569715144"/>
         </scene>
     </scenes>
 </document>
